--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -15,7 +15,7 @@
 | aur      | ttf-symbola            | N.A.                                             | unicode symbols and emojis                                       |
 | pacman   | ttf-liberation         | N.A.                                             | another pretty font                                              |
 | pacman   | ttf-dejavu             | N.A.                                             | the preferred monospace font                                     |
-| aur      | ttf-iosevka            | N.A.                                             | an even cooler monospaced font                                   |
+| aur      | ttf-iosevka-fixed      | N.A.                                             | an even cooler monospaced font                                   |
 | aur      | ttf-sil-kawkab-mono    | N.A.                                             | Arabic mono font                                                 |
 | aur      | ttf-font-awesome       | N.A.                                             | used for the icons in the top bar                                |
 | pacman   | arandr                 | N.A.                                             | UI for screen adjustment                                         |
