--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -65,3 +65,4 @@
 | pacman   | onboard                | N.A.                                             | on-screen keyboard                                               |
 | git      | theprayer              | https://github.com/Naheel-Azawy/theprayer        | CLI prayer time                                                  |
 | aur      | gotop                  | N.A.                                             | a nice system monitor                                            |
+| npm      | shelljs                | N.A.                                             | shell commands on js                                             |
