--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -19,7 +19,7 @@
 | aur      | ttf-sil-kawkab-mono    | N.A.                                             | Arabic mono font                                                 |
 | aur      | ttf-font-awesome       | N.A.                                             | used for the icons in the top bar                                |
 | pacman   | arandr                 | N.A.                                             | UI for screen adjustment                                         |
-| pacman   | compton                | N.A.                                             | for transparency and removing screen-tearing                     |
+| pacman   | picom                  | N.A.                                             | for transparency and removing screen-tearing                     |
 | pacman   | dunst                  | N.A.                                             | suckless notification system                                     |
 | pacman   | feh                    | N.A.                                             | a minimal image viewer (used to set wallpaper)                   |
 | pacman   | imlib2                 | N.A.                                             | images library. Needed for sxiv                                  |
