--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -68,3 +68,4 @@
 | aur      | gotop                  | N.A.                                             | a nice system monitor                                            |
 | npm      | shelljs                | N.A.                                             | shell commands on js                                             |
 | git      | dragon                 | https://github.com/mwh/dragon                    | drag and drop                                                    |
+| pip      | i3ipc                  | N.A.                                             | python IPC for i3wm. Needed to show the top bar                  |
