--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -63,9 +63,9 @@
 | pacman   | mpd                    | N.A.                                             | music player daemon                                              |
 | pacman   | mpc                    | N.A.                                             | mpd client                                                       |
 | pacman   | ncmpcpp                | N.A.                                             | mpd UI                                                           |
+| aur      | mpd-notification       | N.A.                                             | mpd notifications                                                |
 | pacman   | onboard                | N.A.                                             | on-screen keyboard                                               |
 | git      | theprayer              | https://github.com/Naheel-Azawy/theprayer        | CLI prayer time                                                  |
 | aur      | gotop                  | N.A.                                             | a nice system monitor                                            |
 | npm      | shelljs                | N.A.                                             | shell commands on js                                             |
 | git      | dragon                 | https://github.com/mwh/dragon                    | drag and drop                                                    |
-| pip      | i3ipc                  | N.A.                                             | python IPC for i3wm. Needed to show the top bar                  |
