--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -69,3 +69,4 @@
 | npm      | shelljs                | N.A.                                         | shell commands on js                                             |
 | git      | dragon                 | https://github.com/mwh/dragon                | drag and drop                                                    |
 | pacman   | acpilight              | N.A.                                         | brightness control                                               |
+| pacman   | udisks2                | N.A.                                         | nice disks management                                            |
