--- a/packages/base.org
+++ b/packages/base.org
@@ -49,3 +49,4 @@
 | pacman     | encfs               | N.A.                                   | encrypted file system                                        |
 | pip        | trash-cli           | N.A.                                   | CLI XDG trash                                                |
 | pacman     | strace              | N.A.                                   | trace system calls. Needed for cp-p                          |
+| pacman     | expect              | N.A.                                   | needed for ttylock                                           |
