--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -53,3 +53,4 @@
 | pacman | poppler                        | N.A.                                  | manipulates pdfs                                                                               |
 | pacman | fd                             | N.A.                                  | faster find                                                                                    |
 | pacman | ripgrep                        | N.A.                                  | faster grep                                                                                    |
+| npm    | qrcode                         | N.A.                                  | QR code generator                                                                              |
