--- a/packages/base.org
+++ b/packages/base.org
@@ -27,6 +27,7 @@
 | pacman     | highlight           | N.A.                                   | can highlight code output                                    |
 | pacman     | fish                | N.A.                                   | the friendly shell!                                          |
 | pacman     | emacs               | N.A.                                   | the best editor on this planet                               |
+| pacman     | nano                | N.A.                                   | the tiny text editor                                         |
 | pacman     | ispell              | N.A.                                   | spell checker                                                |
 | pacman     | aspell-en           | N.A.                                   | English dictionary for ispell                                |
 | pacman     | acpi                | N.A.                                   | laptop battery information                                   |
