--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -24,20 +24,17 @@
 | pacman | lib32-gnutls                   | N.A.                                  | needed for wine                                                                                |
 | pacman | adobe-source-han-sans-cn-fonts | N.A.                                  | Chinese font                                                                                   |
 | pacman | opendesktop-fonts              | N.A.                                  | Japanese font                                                                                  |
-| aur    | adwaita-qt                     | N.A.                                  | Adwaita GNOME theme for Qt5                                                                    |
-| aur    | adwaita-qt4                    | N.A.                                  | Adwaita GNOME theme for Qt4                                                                    |
 | aur    | transset-df                    | N.A.                                  | used to change the window opacity                                                              |
 | pacman | translate-shell                | N.A.                                  | a command-line translator                                                                      |
 | pip    | numpy                          | N.A.                                  | some actual math in python                                                                     |
 | pip    | matplotlib                     | N.A.                                  | math plotting in python                                                                        |
-| pacman | python-pmw                     | N.A.                                  | needed for matplotlib                                                                          |
+| aur    | python-pmw                     | N.A.                                  | needed for matplotlib                                                                          |
 | pacman | texlive-most                   | N.A.                                  | tex stuff                                                                                      |
 | pacman | texlive-langextra              | N.A.                                  | tex extra languages support                                                                    |
 | pacman | biber                          | N.A.                                  | tex biber                                                                                      |
 | aur    | screenkey                      | N.A.                                  | display the pressed keys on the screen. Useful for screen casting                              |
 | pacman | tree                           | N.A.                                  | list tree of directories                                                                       |
 | pacman | gnuplot                        | N.A.                                  | Gnu plotting program                                                                           |
-| pacman | lsof                           | N.A.                                  | list open files                                                                                |
 | pacman | iotop                          | N.A.                                  | top for disk io                                                                                |
 | pacman | sysstat                        | N.A.                                  | a collection of performance monitoring tools (iostat,isag,mpstat,pidstat,sadf,sar)             |
 | npm    | cloudconvert                   | N.A.                                  | usefull to convert ugly documents written in non-free softwares                                |
@@ -55,3 +52,6 @@
 | pacman | ripgrep                        | N.A.                                  | faster grep                                                                                    |
 | npm    | qrcode                         | N.A.                                  | QR code generator                                                                              |
 | pacman | foliate                        | N.A.                                  | ebook reader                                                                                   |
+| pacman | arch-audit                     | N.A.                                  | audit your system                                                                              |
+| aur    | adwaita-qt                     | N.A.                                  | Adwaita GNOME theme for Qt5                                                                    |
+| aur    | adwaita-qt4                    | N.A.                                  | Adwaita GNOME theme for Qt4                                                                    |
