--- a/packages/base.org
+++ b/packages/base.org
@@ -9,6 +9,7 @@
 | pacman     | npm                 | N.A.                                 | node.js pacage manager                                       |
 | pacman     | python-pip          | N.A.                                 | python's package manager                                     |
 | pacman     | python-wheel        | N.A.                                 | built-package format for Python                              |
+| pacman     | python-gobject      | N.A.                                 | GObject bindings for python                                  |
 | pacman     | cronie              | N.A.                                 | manages scheduled tasks                                      |
 | pacman     | dosfstools          | N.A.                                 | allows your computer to access dos-like filesystems          |
 | pacman     | exfat-utils         | N.A.                                 | allows management of FAT drives                              |
